# homefrog

./: .gitignore  AUTHORS  README  README.md  configure.ac
docs/: ds1820digitemp.txt  plugins.txt  raspberrygpiotemp.txt  telldus.txt
src/: .gitignore  Makefile.am  homefrog-rest.config  homefrog.config  main.c  shp-bus.c  shp-bus.h  shp-complextype-compare.c  shp-complextype-compare.h  shp-complextype-factory.c  shp-complextype-factory.h  shp-complextype.c  shp-complextype.h  shp-component.c  shp-component.h  shp-condition.c  shp-condition.h  shp-controller.c  shp-controller.h  shp-group.c  shp-group.h  shp-http.c  shp-http.h  shp-json.h  shp-message.c  shp-message.h  shp-plugin-factory.c  shp-plugin-factory.h  shp-plugin.c  shp-plugin.h  shp-rule.c  shp-rule.h  shp-scene.c  shp-scene.h  shp-slave-plugin.c  shp-slave-plugin.h  shp-structure-compare.c  shp-structure-compare.h  shp-structure.c  shp-structure.h  (+5 more)
src/plugins/: .gitignore  Makefile.am  lngpio.c  lngpio.h  shp-base1wire.c  shp-base1wire.h  shp-dayschedule.c  shp-dayschedule.h  shp-ds1820digitemp.c  shp-ds1820digitemp.h  shp-dummy.c  shp-dummy.h  shp-grovedust.c  shp-grovedust.h  shp-json.c  shp-mysql.c  shp-mysql.h  shp-raspberrygpio.c  shp-raspberrygpio.h  shp-raspberrygpiotemp.c  shp-raspberrygpiotemp.h  shp-rest.c  shp-rest.h  shp-scenectl.c  shp-scenectl.h  shp-telldus.c  shp-telldus.h  shp-timer-complextype.c  shp-timer-complextype.h  shp-timer.c  shp-timer.h
web/: README  demo.html  index.html
web/css/: modal.css
web/js/: homefrog.js
